--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,22 +1,28 @@
 {% extends 'base.html' %} 
 
+{% block title %}
+  {{ group.title }}
+{% endblock %}
+
 {% block content %}
 <!-- класс py-5 создает отступы сверху и снизу блока -->
   <div class="container py-5">
-    <h1>Лев Толстой – зеркало русской революции.</h1>
+    <h1>{{ group.title }}</h1>
     <p>
-      Записи группы: {{ group }}
+      Записи группы: {{ group.description }}
     </p>
     {% for post in posts %}
-      <ul>
-        <li>
-          Автор: {{ post.author.get_full_name }}
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      <p>{{ post.text }}</p>
+      <article>
+        <ul>
+          <li>
+            Автор: {{ post.author.get_full_name }}
+          </li>
+          <li>
+            Дата публикации: {{ post.pub_date|date:"d E Y" }}
+          </li>
+        </ul>
+      </article>
+      <p>{{ post.text|linebreaks }}</p>
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
     <!-- под последним постом нет линии -->
