--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,23 +1,30 @@
 {% extends 'base.html' %} 
 
+{% block title %}
+  Это главная страница проекта Yatube
+{% endblock %}
+
 {% block content %}
-  <!-- класс py-5 создает отступы сверху и снизу блока -->
   <div class="container py-5">     
     <h1>Последние обновления на сайте</h1>
     {% for post in posts %}
-      <ul>
-        <li>
-          Автор: {{ post.author.get_full_name }}
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      <p>{{ post.text }}</p>
-      {% if post.group %}
-        <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы</a>
-      {% endif %}
-      {% if not forloop.last %}<hr>{% endif %}
+      <article>
+        <ul>
+          <li>
+            Автор: {{ post.author.get_full_name }}
+          </li>
+          <li>
+            Дата публикации: {{ post.pub_date|date:"d E Y" }}
+          </li>
+        </ul>
+        <p>{{ post.text|linebreaks  }}</p>
+        {% if post.group %}
+          <a href="{% url 'posts:group_posts' post.group.slug %}"> # {{post.group}}</a>
+        {% else %}
+          <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
+        {% endif %}
+        {% if not forloop.last %}<hr>{% endif %}
+      </article>
     {% endfor %}
   </div>  
 {% endblock %} 
