--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -5,11 +5,10 @@
 {% endblock %}
 
 {% block content %}
-<!-- класс py-5 создает отступы сверху и снизу блока -->
   <div class="container py-5">
     <h1>{{ group.title }}</h1>
     <p>
-      Записи группы: {{ group.description }}
+      Записи группы: {{ group.description }} <!-- здесь у меня описание группы поэтому считаю что linebreaks не нужно. Коммент удалю потом-->
     </p>
     {% for post in posts %}
       <article>
@@ -21,10 +20,9 @@
             Дата публикации: {{ post.pub_date|date:"d E Y" }}
           </li>
         </ul>
-      </article>
-      <p>{{ post.text|linebreaks }}</p>
+        <p>{{ post.text|linebreaks }}</p>
+      </article>      
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
-    <!-- под последним постом нет линии -->
   </div>  
 {% endblock %} 
