--- a/yatube/templates/users/signup.html
+++ b/yatube/templates/users/signup.html
@@ -4,11 +4,9 @@
   <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
-        <div class="card-header">
-          Зарегистрироваться
-        </div>
+        <div class="card-header">Зарегистрироваться</div>
         <div class="card-body">
-          {# Этот блок будет показан, если в форме есть ошибки #}
+        {% load user_filters %}
           {% if form.errors %}
             {% for field in form %}
               {% for error in field.errors %}            
@@ -24,32 +22,32 @@
             {% endfor %}
           {% endif %}
 
-            <form method="post" action="{% url 'users:signup' %}">
-              {% csrf_token %}
-              {% for field in form %}
-              <div class="form-group row my-3 p-3">
-                <label for="{{ field.id_for_label }}">
-                  {{ field.label }}
-                  {% if field.field.required %}
-                    <span class="required text-danger">*</span>
-                  {% endif %}
-                </label>    
-                {{ field }}
-                {% if field.help_text %}
-                  <small id="{{ field.id_for_label }}-help" class="form-text text-muted">
-                    {{ field.help_text|safe }}
-                  </small>
+          <form method="post" action="{% url 'users:signup' %}">
+          {% csrf_token %}
+          {% for field in form %}
+            <div class="form-group row my-3 p-3">
+              <label for="{{ field.id_for_label }}">
+                {{ field.label }}
+                {% if field.field.required %}
+                  <span class="required text-danger">*</span>
                 {% endif %}
-              </div>
-              {% endfor %}
-              <div class="col-md-6 offset-md-4">
-                <button type="submit" class="btn btn-primary">
-                  Зарегистрироваться
-                </button>
-              </div>
-            </form>
-          </div> <!-- card body -->
-        </div> <!-- card -->
-      </div> <!-- col -->
+              </label>    
+              {{ field|addclass:'form-control' }}
+              {% if field.help_text %}
+                <small id="{{ field.id_for_label }}-help" class="form-text text-muted">
+                  {{ field.help_text|safe }}
+                </small>
+              {% endif %}
+            </div>
+          {% endfor %}
+            <div class="col-md-6 offset-md-4">
+              <button type="submit" class="btn btn-primary">
+                Зарегистрироваться
+              </button>
+            </div>
+          </form>
+        </div> <!-- card body -->
+      </div> <!-- card -->
+    </div> <!-- col -->
   </div> <!-- row -->
 {% endblock %} 
