--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -10,7 +10,7 @@
     <p>
       Записи группы: {{ group.description|linebreaks }} <!-- Убедил. Удалю потом :)-->
     </p>
-    {% for post in posts %}
+    {% for post in page_obj %}
       <article>
         <ul>
           <li>
@@ -24,5 +24,6 @@
       </article>      
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
+    {% include 'includes/paginator.html' %}
   </div>  
 {% endblock %} 
