--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -7,7 +7,8 @@
 {% block content %}
   <div class="container py-5">     
     <h1>Последние обновления на сайте</h1>
-    {% for post in posts %}
+
+    {% for post in page_obj %}
       <article>
         <ul>
           <li>
@@ -26,5 +27,6 @@
       </article>
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
+    {% include 'includes/paginator.html' %}
   </div>  
 {% endblock %} 
