berofe nav in templates

--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -25,7 +25,15 @@
     и 75% при размерах экрана ≥768px
   {% endcomment %}
   <article class="col-12 col-md-9">
-    <p>Текст страницы "Технологии"</p>
+    <p>
+      Текст страницы "Технологии"
+      Asfdl;akjsdf;kljas;fj
+      asldlfkjas;lfdsklslasmdf
+      asdlfkmasd;lfmsdfkl </br>
+      asdflasdkfj;klasdjflkjasd
+      asdfjasfkjl
+
+    </p>
   </article>
 </div>
 {% endblock %}
